// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component renders primary button correctly 1`] = `
<button
  class="py-2 px-6 rounded text-center flex flex-row items-center gap-2 bg-blue-800 shadow-inner-glow text-white hover:bg-blue-600 undefined"
>
  Primary Button
</button>
`;

exports[`Button component renders primary link correctly 1`] = `
<a
  class="py-2 px-6 rounded text-center flex flex-row items-center gap-2 bg-blue-800 shadow-inner-glow text-white hover:bg-blue-600 undefined"
  href="#"
>
  Primary Link
</a>
`;

exports[`Button component renders secondary button correctly 1`] = `
<button
  class="py-2 px-6 rounded text-center flex flex-row items-center gap-2 border border-blue-600 shadow-inner-glow hover:bg-blue-200/20 undefined"
>
  Secondary Button
</button>
`;

exports[`Button component renders secondary link correctly 1`] = `
<a
  class="py-2 px-6 rounded text-center flex flex-row items-center gap-2 border border-blue-600 shadow-inner-glow hover:bg-blue-200/20 undefined"
  href="#"
>
  Secondary Link
</a>
`;
